// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GifGrid /> Debe de mostrar items cuando se cargan imagenes useFetchGifs 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    Halo
  </h3>
  <article
    className="container"
  >
    <GifGridItem
      id={1}
      key="1"
      title="Cualquier cosa"
      url="https://locahost:3000/cualquier/cosa.jpg"
    />
  </article>
</Fragment>
`;

exports[`<GifGrid /> Debe hacer match con el snpashot 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    Halo
  </h3>
  <h2
    className="animate__animated animate__fadeIn"
  >
    Loading...
  </h2>
  <article
    className="container"
  />
</Fragment>
`;
